add first resquest mapping to response

--- a/example03_springmvc-sample/src/main/webapp/WEB-INF/web.xml
+++ b/example03_springmvc-sample/src/main/webapp/WEB-INF/web.xml
@@ -7,9 +7,10 @@
     <display-name>DispatcherServlet</display-name>
     <servlet-name>DispatcherServlet</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <load-on-startup>1</load-on-startup><!-- This Servlet's object will be initialized on startup a not only it starts to come request to it -->
   </servlet>
   <servlet-mapping>
     <servlet-name>DispatcherServlet</servlet-name>
-    <url-pattern>/DispatcherServlet</url-pattern>
+    <url-pattern>/DispatcherServlet/*</url-pattern>
   </servlet-mapping>
 </web-app>
