--- a/example03_springmvc-sample/src/main/webapp/WEB-INF/web.xml
+++ b/example03_springmvc-sample/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,11 @@
     <servlet-name>DispatcherServlet</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <load-on-startup>1</load-on-startup><!-- This Servlet's object will be initialized on startup a not only it starts to come request to it -->
+    <!-- In case of the context configuration file be in another location
+    	<init-param>
+    		<param-name>contextConfigLocation</param-name>
+    	<param-value>/WEB-INF/beans.xml</param-value>
+    </init-param>--> 
   </servlet>
   <servlet-mapping>
     <servlet-name>DispatcherServlet</servlet-name>
